[gd_scene load_steps=22 format=3 uid="uid://dgpv15k304mfk"]

[ext_resource type="Script" uid="uid://gs6ju2xcnt5v" path="res://Enemies/orange_cat.gd" id="1_yty1r"]
[ext_resource type="Texture2D" uid="uid://b18lvpxluecxu" path="res://Enemies/textures/Cat/OrangeCat/orange cat -ed97.png" id="2_3n1dq"]
[ext_resource type="Texture2D" uid="uid://bbg6v5slse0b4" path="res://Shadows/SmallShadow.png" id="3_7ddhh"]
[ext_resource type="PackedScene" uid="uid://bhan4jr3ia0k" path="res://Hitbox&HurtBox/hurt_box.tscn" id="4_prby6"]
[ext_resource type="PackedScene" uid="uid://c4xv6q1w8gci3" path="res://stats.tscn" id="5_5ql4m"]
[ext_resource type="PackedScene" uid="uid://b56v5th4aekxw" path="res://Effects/Deaths/Scenes/player_detection_area.tscn" id="6_n8b5r"]
[ext_resource type="PackedScene" uid="uid://brwln3cepwv11" path="res://Hitbox&HurtBox/hit_box.tscn" id="7_5c3cj"]
[ext_resource type="PackedScene" uid="uid://b0c3qy58pnkk0" path="res://Effects/Deaths/Scenes/health_bar.tscn" id="8_lw0sd"]
[ext_resource type="PackedScene" uid="uid://uvb4fi6eyo04" path="res://Hitbox&HurtBox/soft_collision.tscn" id="9_gapvr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_h48lm"]
radius = 9.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_54b1t"]
radius = 7.0
height = 20.0

[sub_resource type="CircleShape2D" id="CircleShape2D_saq7c"]
radius = 260.008

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_b14x4"]
radius = 8.0
height = 34.0

[sub_resource type="Animation" id="Animation_yty1r"]
resource_name = "Attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [7, 8, 9, 10, 11, 12, 13, 14, 15, 16]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(9, -4)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.226175, 0.990279),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitBox/CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.0616838),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(26, -9)]
}

[sub_resource type="Animation" id="Animation_n8b5r"]
resource_name = "Idle"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(9, -4)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_5ql4m"]
resource_name = "LandAttack"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [25, 26, 27, 28, 29, 30, 31]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.299529, 0.527741, 0.652036),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(3, -30), Vector2(4, -19), Vector2(4, -11), Vector2(4, -7)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.220062, 0.760029),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitBox/CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.220062, 0.350469, 0.537929),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(20, -30), Vector2(13, -28), Vector2(15, -22), Vector2(17, -10)]
}

[sub_resource type="Animation" id="Animation_7ddhh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, -5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimationPlayer:active")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("HitBox/CollisionShape2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(13, -28)]
}

[sub_resource type="Animation" id="Animation_prby6"]
resource_name = "ReadyJump"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [21, 22, 23, 24]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(9, -4)]
}

[sub_resource type="Animation" id="Animation_3n1dq"]
resource_name = "Walk"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(9, -4)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6826),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5c3cj"]
_data = {
&"Attack": SubResource("Animation_yty1r"),
&"Idle": SubResource("Animation_n8b5r"),
&"LandAttack": SubResource("Animation_5ql4m"),
&"RESET": SubResource("Animation_7ddhh"),
&"ReadyJump": SubResource("Animation_prby6"),
&"Walk": SubResource("Animation_3n1dq")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_nthge"]
radius = 7.0

[node name="OrangeCat" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_yty1r")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(2, -5)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_3n1dq")
hframes = 8
vframes = 7

[node name="Shadow" type="Sprite2D" parent="."]
position = Vector2(8, 4)
scale = Vector2(1.6, 1)
texture = ExtResource("3_7ddhh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(7, -2)
shape = SubResource("CircleShape2D_h48lm")

[node name="HurtBox" parent="." instance=ExtResource("4_prby6")]
collision_layer = 8
collision_mask = 16

[node name="CollisionShape2D" parent="HurtBox" index="0"]
visible = false
position = Vector2(0, -1)
shape = SubResource("CapsuleShape2D_54b1t")

[node name="Stats" parent="." instance=ExtResource("5_5ql4m")]
max_health = 6.0

[node name="PlayerDetectionArea" parent="." instance=ExtResource("6_n8b5r")]
visible = false

[node name="CollisionShape2D" parent="PlayerDetectionArea" index="0"]
visible = false
shape = SubResource("CircleShape2D_saq7c")

[node name="HitBox" parent="." instance=ExtResource("7_5c3cj")]
collision_layer = 32
collision_mask = 16

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(13, -28)
shape = SubResource("CapsuleShape2D_b14x4")
disabled = true

[node name="HealthBar" parent="." instance=ExtResource("8_lw0sd")]
offset_left = -10.0
offset_top = -16.0
offset_right = 11.0
offset_bottom = -12.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_5c3cj")
}

[node name="SoftCollision" parent="." instance=ExtResource("9_gapvr")]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2(-1, -3)
shape = SubResource("CircleShape2D_nthge")

[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]

[editable path="HurtBox"]
[editable path="PlayerDetectionArea"]
[editable path="HitBox"]
[editable path="SoftCollision"]
